# CompanyVirtual

./: .env.example  .gitignore  AGENTS.md  eslint.config.mjs  package-lock.json  package.json  tsconfig.base.json  tsconfig.json  virtual-company-platform-plan.md  vitest.config.ts
apps/desktop/: README.md  package.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: lib.rs  main.rs  service.rs
apps/server/: package.json  tsconfig.json
apps/server/src/: index.ts  main.ts  realtime.ts  server.ts
apps/server/src/api/: routes.ts
apps/server/src/comms/: cloudAdapter.ts  frontDesk.ts  index.ts  mockAdapter.ts  ownerAuth.ts  relay.ts  types.ts
apps/server/src/config/: costRates.ts  seed.ts  skills.ts
apps/web/: .env.desktop  index.html  package.json  tsconfig.json  vite.config.ts
apps/web/src/: App.tsx  api.ts  desktop.ts  main.tsx  socket.ts  styles.css  vite-env.d.ts
docs/: BUGLIST.md  CODE_REVIEW.md  PERBAIKAN-2026-06-10.md  ROADMAP.md  RUNBOOK.md  SPIKES.md
infra/codex/: REVIEW.md
infra/scripts/: spike-loop.ts  spike-router.ts  spike-wa.ts  vault.ts
tests/: audit.test.ts  auth.test.ts  cloudWebhook.test.ts  configApi.test.ts  db.test.ts  dispatch.test.ts  guardrails.test.ts  kpi.test.ts  loop.test.ts  memory.test.ts  ownerAuth.test.ts  publish.test.ts  relay.test.ts  router.test.ts  sales.test.ts  seed.test.ts  server.test.ts  social.test.ts  templates.test.ts  throttle.test.ts  vault.test.ts  workflow.test.ts
tests/helpers/: mysql.ts
(+30 files in other folders)
