[package]
name = "vc-desktop"
version = "0.0.0"
description = "Virtual Company — shell desktop (Tauri)"
authors = ["Virtual Company Platform"]
edition = "2021"
rust-version = "1.77.2"

# Lib + bin: `main.rs` memanggil `vc_desktop_lib::run()`. crate-type lengkap agar
# kompatibel bila menambah target mobile (6.3, opsional).
[lib]
name = "vc_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Profil rilis ramping (opsional; aman dihapus).
[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
